# newsfeeds-plasma5-dataengine

./: CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  faviconrequestjob.cpp  faviconrequestjob.h  faviconstorage.cpp  faviconstorage.h  fileretriever.cpp  fileretriever.h  newsfeedsengine.cpp  newsfeedsengine.h  plasma-dataengine-newsfeeds.desktop
